# Qt-Database

./: CMakeLists.txt  README.md  database.cpp  database.h  main.cpp
